--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Qian Huang</title>
+    <title>Guankai Zhai</title>
     <style type="text/css">
     </style>
 </head>
@@ -13,8 +13,9 @@
 <body>
   <div class=row>
       <div class=left>
-      <h1>Qian Huang</h1>
-        <p> My research interest is in bridging "system 1" and "system 2" reasoning. One approach I find promising lies in allowing neural networks to reason over the underlying graph structure of data, especially in domains where this structure is not provided. I believe that doing so requires insights from both machine learning and graph algorithms. I am also interested in demystifying neural networks through exploring their robustness. </p>
+      <h1>Guanaki Zhai</h1>
+        <p> My research interest lies at the intersection between machine learning and traditional feedback controls.
+            While there has recently been widely recognized progresses in machine learning such as AlphaGo and  </p>
         <p>I'm currently a first year PhD student at Stanford University.</p>
         <p> Links: [<a href="mailto:qh53@cornell.edu">Email</a>] [<a href="files/Qian_Huang.pdf">CV</a>] [<a href="https://scholar.google.com/citations?user=L3hkmG0AAAAJ&hl=en">Google Scholar</a>] </p>
     </div>
