--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1>Guanaki Zhai</h1>
         <p> My research interest lies at the intersection between machine learning and traditional feedback controls.
             While there has recently been widely recognized progresses in machine learning such as AlphaGo and  </p>
-        <p>I'm currently a first year PhD student at Stanford University.</p>
+        <p>I'm currently a sophomore studying computer science at Cornell University.</p>
         <p> Links: [<a href="mailto:qh53@cornell.edu">Email</a>] [<a href="files/Qian_Huang.pdf">CV</a>] [<a href="https://scholar.google.com/citations?user=L3hkmG0AAAAJ&hl=en">Google Scholar</a>] </p>
     </div>
     <div class="container">
