Added files folder

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
       <div class=left>
       <h1>Guanaki Zhai</h1>
         <p> My research interest lies at the intersection between machine learning and traditional feedback controls.
-            While there has recently been widely recognized progresses in machine learning such as AlphaGo and  </p>
+            While there has recently been widely recognized progresses in machine learning such as AlphaGo. </p>
         <p>I'm currently a sophomore studying computer science at Cornell University.</p>
-        <p> Links: [<a href="mailto:qh53@cornell.edu">Email</a>] [<a href="files/Qian_Huang.pdf">CV</a>] [<a href="https://scholar.google.com/citations?user=L3hkmG0AAAAJ&hl=en">Google Scholar</a>] </p>
+        <p> Links: [<a href="mailto:gz252@cornell.edu">Email</a>] [<a href="files/ZHAI_GUANKAI.pdf">Resume</a>] [<a href="https://www.linkedin.com/in/gk-zhai/">LinkedIn</a>] </p>
     </div>
     <div class="container">
-      <img  src="img/qian.jpg">
+      <img  src="files/vertical.jpeg">
     </div>
 
   </div>
