Added cockpit photo

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
   <ul>
   <li class="research_item">
     <div class="container grid-item" style="float:left">
-        <img src="img/simple.png" >
+        <img src="files/cockpit.jpeg" >
+        <figcaption>Photo Credit: Jiajun Ma</figcaption>
     </div>
     <b>Cockpit Instruments: A Historical Study of the Ergonomic Considerations in Aircraft</b>
     <br>
